# server_backup

./: CMakeLists.txt  README.md
icarus/: aig_before.blif.dot  c1355_tb.v  c17_aig2.v  c17_tb.v  c432_tb.v  s27_tb.v  s382_tb.v  top.vvp
include/: circuit_simulator.h  fault_injector.h  fstra.h  iverilog_simulator.h  mc_fault_simulator.h  parse_verilog.h  vcd_parser.h
netlist/: dff.json  dff.ys  tb_top.ys  top.json  top.ys
src/ISCAS89/: 1.tcl  gen.sh  output.v  s27.aig  s27.vcd  s27.view  s27_1.blif  s27_aig.v  s27_sim  s27_tb.v  show.sh
src/ISCAS89/scripts/: aig_to_verilog.py  analyze_aig.py  analyze_binary_aig_structure.py  binary_aig_to_aag.py
src/benchmarks/: c17.dot  c432.dot
src/benchmarks89/: translation.py
src/benchmarks89/AIG/: s1238.aig  s1238.blif  s13207.aig  s13207.blif  s1423.aig  s1423.blif  s1488.aig  s1488.blif  s15850.aig  s15850.blif  s27.aig  s27.blif  s35932.aig  s35932.blif  s382.aig  s382.blif  s38417.aig  s38417.blif  s38584.aig  s38584.blif  s420.aig  s420.blif  s5378.aig  s5378.blif  s641.aig  s641.blif  s713.aig  s713.blif  s9234.aig  s9234.blif
src/benchmarks89/ISCAS89/: s1238.blif  s13207.blif  s1423.blif  s1488.blif  s15850.blif  s27.blif  s27_.blif  s35932.blif  s382.blif  s38417.blif  s38584.blif  s420.blif  s5378.blif  s641.blif  s713.blif  s9234.blif
src/benchmarks89/tests/: s1238.aig  s1238.blif  s13207.aig  s13207.blif  s1423.aig  s1423.blif  s1488.aig  s1488.blif  s15850.aig  s15850.blif  s27.blif  s27.json  s35932.aig  s35932.blif  s382.aig  s382.blif  s38417.aig  s38417.blif  s38584.aig  s38584.blif  s420.aig  s420.blif  s5378.aig  s5378.blif  s641.aig  s641.blif  s713.aig  s713.blif  s9234.aig  s9234.blif
tests/: CMakeLists.txt  drawC17.cpp  fsnode.cpp  loadNet.cpp  testVerilogSim.cpp  verilogRead.cpp
work/: CMakeLists.txt  circuit_simulator.cpp  fault_injector.cpp  fstra.cpp  iverilog_simulator.cpp  main.cpp  mc_fault_simulator.cpp  parse_verilog.cpp
